--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
        When the TARDIS landed in a junkyard on Earth it disguised itself as a police box, when the TARDIS next landed in the year 100,000 BC the exterior didn’t change.
        The Doctor revealed that the chameleon circuit was broken. </p2>
    
-   <img> src="tardis.jpg" alt="Tardis Photo" width="84" height="84">
+   <img src="phototardis.jpg" alt="tardis" width="500" height="420">
 
       <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
       <script src = "https://code.jquery.com/jquery.js"></script>
