--- a/index.html
+++ b/index.html
@@ -28,4 +28,9 @@
       <script src = "js/bootstrap.min.js"></script>
       
    </body>
+   <footer>
+      <p>Allons-y Alonso</p>
+	  <p>RIP Bob, you shall always be remembered</p>
+	  <img src="Bob the chicken.png" alt="Bob the chicken">
+   </footer>
 </html>
