--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       
    </body>
    <footer>
-      <p>Allons-y Alonso</p>
+      <p>Allons-y Alonso!</p>
 	  <p>RIP Bob, you shall always be remembered</p>
 	  <img src="Bob the chicken.png" alt="Bob the chicken">
    </footer>
