--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
    <div class = "container"> 
       <div class = "row"> 
-         <div class ".col-sm-12
+         <div class ".col-sm-12>
    <head>
       <title>Tardis</title>
       <meta name = "viewport" content = "width = device-width, initial-scale = 1.0">
@@ -22,20 +22,26 @@
 
    <body>
       <h1>Taris</h1>
-      <h2>It is blue</h2>
+	<h2>It is blue</h2>
+<div class = "row"> 
+ 	<div class ".col-sm-12>
       <p1> The TARDIS is dimensionally transcendental, meaning it is bigger on the inside than the outside.
 	   The interior exists in a different, relative dimension to the exterior.
 	   In the very first story it was established that the TARDIS usually changes its exterior appearance on each trip to blend in with its surroundings.
 	   The Doctor later stated that it was the broken chameleon circuit that caused it to be stuck in the shape of an old style police box.
 	   *TARDIS* </p1>
       <img src="phototardis.jpg" alt="tardis" width="500" height="420">
-    
+</div> <!--square-->
+      </div> <!--row--> 
+<div class = "row"> 
+ 	<div class ".col-sm-12>
    <footer>
       <p>Allons-y Alonso!</p>
 	  <p>RIP Bob, you shall always be remembered</p>
 	  
    </footer>
- 
+ </div> <!--square-->
+      </div> <!--row--> 
 	  
 
       <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
